# 8V42_Kiegechev_Programming_3sem_lab1

./: CMakeLists.txt  main.cpp  version.h.in
.github/workflows/: ci.yml
